[gd_scene load_steps=8 format=3 uid="uid://8qh5lo6nsmdj"]

[ext_resource type="Script" path="res://dialogue/DialogueUI.gd" id="1_4afek"]
[ext_resource type="Texture2D" uid="uid://kwpo2d0jtxun" path="res://res/img/portraits/debug/debug.png" id="2_sp74p"]
[ext_resource type="Shader" path="res://res/shader/DialogueUI.gdshader" id="3_rsi2g"]
[ext_resource type="Texture2D" uid="uid://dg8e7wtrl67la" path="res://res/img/texture/notebook_paper.jpg" id="4_ql6ud"]
[ext_resource type="Theme" uid="uid://cyyjojvna3xqg" path="res://res/themes/def_theme.tres" id="5_ve51h"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="6_vha0q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vgjq1"]
shader = ExtResource("3_rsi2g")
shader_parameter/transparent_ratio = 0.075
shader_parameter/modulate_color = Color(0, 0, 0, 1)
shader_parameter/modulate_ratio = 0.85

[node name="DialogueUI" type="CanvasLayer"]
script = ExtResource("1_4afek")

[node name="debug_img" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.137255)
offset_left = -1.0
offset_top = -68.0
offset_right = 1279.0
offset_bottom = 652.0
texture = ExtResource("2_sp74p")
stretch_mode = 2

[node name="Dia_Box" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_vgjq1")
clip_contents = true
anchors_preset = -1
anchor_top = 0.670722
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0799561
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ql6ud")
expand_mode = 2
stretch_mode = 2

[node name="Margin" type="MarginContainer" parent="Dia_Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -615.5
offset_top = -93.0
offset_right = 615.5
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Dia_Box/Margin"]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="Dia_Box/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_ve51h")
theme_override_font_sizes/normal_font_size = 31
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" type="RichTextLabel" parent="Dia_Box/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_ve51h")
bbcode_enabled = true
text = "Here is some text blah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah "
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false
visible_characters_behavior = 1
script = ExtResource("6_vha0q")
skip_action = "INPUT_progress_dialogue"
seconds_per_step = 0.1
pause_at_characters = ""

[node name="ResponseBox" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -436.0
offset_top = -305.0
offset_right = 436.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="Responses" type="VBoxContainer" parent="ResponseBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResponseTemplate" type="Button" parent="ResponseBox/Responses"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme = ExtResource("5_ve51h")
text = "This is a typical response option."

[connection signal="continue_dialogue" from="Dia_Box/Margin/VBox/DialogueLabel" to="." method="_on_dialogue_label_continue_dialogue"]
[connection signal="finished_typing" from="Dia_Box/Margin/VBox/DialogueLabel" to="." method="_on_dialogue_label_finished_typing"]
